                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-07-2005 changed: if id3v2 tag it present and contains no data, the id3v1 tag is loaded
 - 07-07-2005 fixed: exception while scanning files with utf encoded id3 tags
 - 07-07-2005 fixed: Large list(s) used small icons.  We now choose the icon size based on the image size in the list (if it's bigger than 32x32 it'll use large, else it uses small).
 - 07-07-2005 changed: Video OSD now runs as a modal dialog - more consistent with the rest of the windows system.
 - 07-07-2005 added: Build.bat now also copies the new sound folder
 - 07-07-2005 changed: increased write performance of the sqlite databases (databases need to be recreated to make use of the increase)
 - 07-07-2005 added: Exception detection in the filereader for over-allocation conditions.
 - 07-07-2005 changed: Dropped max audio caches and max local disk cache to 4Mb.
 - 07-07-2005 changed: Virtual keyboard pops up using a thread message (fixes clashes when called from a different thread).
 - 07-07-2005 fixed: Seek bar start seek location was dependent on when it first popped up, rather than the current position.
 - 07-07-2005 added: Player.Time, Player.TimeRemaining and Player.Duration info labels.
 - 07-07-2005 fixed: Textbox page up/down problems.
 - 06-07-2005 added: Conditional visibility stuff: Player.Seeking, Player.ShowTime, Window.IsActive(window), where window is something like "MyVideos" or a window id.
 - 06-07-2005 added: <visible> tag to windows.  Allows skinners to specify when a dialog should be displayed.  Only works with <type>dialog</type>.